add more tooltip guide for "Thiết lập chân trang", "Thiết lập phễu khoá học/Khoá học","Thiết lập phễu khoá học/Lớp học","Thiết lập phễu khoá học/Buổi học". Update localization & missing content for old  tooltips

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "account_balance": "Account balance",
   "account_holder": "Account holder",
   "account_number": "Account number",
   "account_number_receiver": "Receiver's account number",
@@ -85,6 +86,7 @@
   "benefit_package_list": "Benefit package list",
   "benefit_package_name": "Benefit package name",
   "big_courses": "Big courses",
+  "big_course": "Big course",
   "business_empower": "Empowering Business",
   "by_date": "By date",
   "by_learners": "By learners",
@@ -111,6 +113,7 @@
   "category": "Category",
   "category_icon": "Category icon",
   "category_name": "Category name",
+  "caution": "Caution",
   "certificate": "Certificate",
   "change_budget_of_order": "Change budget of order",
   "change_role": "Change role",
@@ -126,6 +129,7 @@
   "class_name": "Class name",
   "classes": "Classes",
   "click_here_to_paste_image": "Click here to paste image",
+  "collaborators_page": "Collaborators Page",
   "collected_information": "Collected information",
   "column_name": "Column name",
   "comment_reaction": "Comment reaction",
@@ -279,18 +283,49 @@
   "gift_course": "Gift course",
   "gift_membership": "Gift membership",
   "growth": "Growth levels",
+  "guide_class_course": "Select the course for which you want to create a class",
+  "guide_class_max_absences": "Enter the number of absences that you will allow for a student to continue participating in your class.",
+  "guide_class_name": "Enter any name that you can easily identify",
+  "guide_course_code": "Typically, this will be the course name without accents, with hyphens connecting the words. You can also change it as you wish.",
+  "guide_course_description": "Write a short description of the course. Note: it should include the course name and SEO keywords to increase searchability on Google.",
+  "guide_course_direct_referral_point": "Points earned when a student refers a new customer who completes the registration information and verifies the registration by clicking the verification link sent in the email.",
+  "guide_course_indirect_referral_point": "Points earned when a student, referred by another student, further refers a new customer who completes the registration information and verifies the registration by clicking the verification link sent in the email.",
+  "guide_course_name": "Choose a course name that is easy to remember and focuses on the customer's needs.",
+  "guide_course_refferal_program": "You can enter the content to guide the referral competition rules here. You can refer to our sample content by clicking the 'Download Example' button.",
+  "guide_course_registration_point": "Points earned when a customer completes the registration information and verifies the registration by clicking the verification link sent in the email.",
+  "guide_course_teacher": "Select the speaker who will teach this course.",
+  "guide_course_type_big": "A big course has a fee. You cannot create or sell tickets for this course.",
+  "guide_course_type_funnel": "A funnel course will be organized for free, so it has no course fee. However, you can sell additional paid tickets.",
+  "guide_domain_without_prefix": "No need to enter https://www.",
+  "guide_external_selection": "Copy the link of the external page that you want",
+  "guide_footer_column_name": "This is the column title, used to group the content you want to display in the footer.",
+  "guide_footer_item_name": "This is the button name that will be displayed in the footer.",
+  "guide_footer_item_position": "This is the order in which the item will appear in the column.",
   "guide_group_permission_activate": "Always ensure that the permission group is active. You can also deactivate the group if you want to limit the authority of personnel.",
   "guide_group_permission_add_new": "Click this Add New button to go to the Add New Permission Group page.",
+  "guide_group_permission_description": "You can describe the roles and responsibilities of the permission group here. This content helps you easily assign permissions to each staff member in the organization.",
   "guide_group_permission_name": "Name it according to the role, for example, head of HR, head of sales, sales staff...",
   "guide_group_permission_pick": "Grouping multiple small permissions into one permission group means that you create a role and assign them certain rights within your organization.",
+  "guide_group_permission_status": "Always ensure that the organization's permission group is in the active state. You can also disable the group to restrict staff permissions.",
   "guide_header_menu_name": "This is the name of the button that will appear in the top menu, such as home, introduction, courses...",
   "guide_header_menu_parent_link": "If you want this button to be a subcategory (category) under another button (navigation), select this option; if not, leave it blank.",
   "guide_header_menu_position": "The display order on the menu, counting from left to right.",
   "guide_header_menu_status": "If enabled, the button will appear in the menu. If disabled, this button will be hidden.",
+  "guide_homepage_creation": "Only one homepage can be created, this will be the default page when accessing your website",
+  "guide_internal_selection": "Choose one of the pages you have created in the subpage setup section",
+  "guide_lesson_duration": "Select the start and end time of the lesson. This is also the time during which your students can check in.",
+  "guide_lesson_duration_note": "Note: A class should be divided into multiple lessons. A day can be split into two sessions: morning and afternoon.",
+  "guide_normal_page_creation": "Multiple pages can be created",
+  "guide_organization_acp_domain": "This is the domain where the organization's personnel can access and manage the system.",
   "guide_organization_address": "Enter the address of your organization's headquarters or office. This information will appear on the organization's contact page.",
   "guide_organization_admin": "This is the Admin account of the system.",
+  "guide_organization_data_process_auto": "Automatic: The system automatically distributes data evenly to the organization's sales staff in a round-robin logic (1234512345...)",
+  "guide_organization_data_process_manual": "Manual: The sales manager manually assigns data to the organization's sales staff.",
+  "guide_organization_e_learning_domain": "This is the domain where students can access the e-learning system.",
   "guide_organization_email": "This is the email information for the organization so that customers can contact you. This information will appear in the menu and the contact section outside the homepage.",
   "guide_organization_embed_map": "If your organization has provided information and location on Google Maps, you can copy and paste the embed code here. Information about your organization's location will appear on the contact page.",
+  "guide_organization_forum_domain": "This is the domain where students can access the community forum system.",
+  "guide_organization_homepage_domain": "This is the domain where students can access the organization's homepage, landing pages, and register for courses.",
   "guide_organization_logo": "These logo elements will be displayed in the function panel on the left of the admin website and other content pages.",
   "guide_organization_name": "The organization name will be displayed in emails, on the e-learning platform, and other information pages. You can customize it at any time.",
   "guide_organization_phone": "This is the phone number for the organization to allow customers to reach you. This information will appear in the menu and the contact section outside the homepage.",
@@ -299,6 +334,7 @@
   "guide_page_content": "This is the main content of the page. You should hire someone to code the HTML website or contact our service support team. Hotline: 0969218765.",
   "guide_page_description": "A brief description of the content of this page.",
   "guide_page_name": "The name of the subpage in your website.",
+  "guide_page_slug": "Typically, this will be the subpage name written without accents, connected with hyphens",
   "guide_website_background_footer": "The color of the footer should contrast with the logo color, usually a dark color.",
   "guide_website_background_header": "The color of the menu bar should contrast with the logo color, usually white.",
   "guide_website_copyright": "This content will appear at the bottom of the homepage, usually a short line. For example: COPYRIGHT © (organization name) ALL RIGHTS RESERVED.",
@@ -307,6 +343,13 @@
   "guide_website_logo_header": "Upload an image of your organization's logo. This image will appear at the top of the page.",
   "guide_website_name": "Enter the website name in a concise, memorable way. It is usually the name of your organization.",
   "guide_website_social_links": "Links to the organization's social media pages. These links must include https://www........",
+  "guide_withdraw_config_description": "This is the note section that you want to notify members about. This content will be displayed in the withdrawal section.",
+  "guide_withdraw_monthly": "Enter the day on which you want members to make withdrawal requests.",
+  "guide_withdraw_weekly": "Select the day of the week you want members to make withdrawal requests.",
+  "guide_withdrawal_advanced_limit": "Only applicable to monthly withdrawals. Enter here the percentage of the total amount in the member's account that you allow for early withdrawal.",
+  "guide_withdrawal_bank_transfer": "This is a manual payment method, you will need to manually activate member accounts and e-learning courses.",
+  "guide_withdrawal_payment_method_note": "When setting up this payment method, you should contact our support team. Hotline: 0969218765",
+  "guide_withdrawal_vnpay": "This is an automatic payment method, all payment, verification, and course activation processes as well as membership are fully automated",
   "has_account": "Has account",
   "has_discount": "Has discount",
   "homepage": "Homepage",
@@ -363,6 +406,7 @@
   "lifetime_price": "Price for lifetime",
   "link": "Link",
   "link_on_menu": "Link on menu",
+  "load_example": "Load example",
   "location": "Location",
   "log_out": "Log out",
   "logo_link": "Logo link",
@@ -413,6 +457,7 @@
   "opening_class": "Opening class",
   "operation": "Operation",
   "optional_course_settings": "Optional course settings",
+  "or": "or",
   "order": "order",
   "order_code": "Order code",
   "order_count": "Order count",
@@ -427,6 +472,7 @@
   "organization_representative": "Organization representative",
   "organizations": "Organizations",
   "other_costs": "Other costs",
+  "other_methods": "other methods",
   "others_repliable": "Others repliable",
   "over_paid": "Over paid",
   "owner": "Owner",
@@ -506,6 +552,7 @@
   "price_list": "Price List",
   "price_list_categories": "Price list categories",
   "price_list_config": "Price List Configuration",
+  "price_list_dis": "Configure price list display",
   "price_name": "The price list name",
   "price_one_year": "Price for 1 year",
   "price_six_months": "Price 6 months",
@@ -598,6 +645,7 @@
   "reset": "Reset",
   "resource": "Resource",
   "restore_ticket": "Restore ticket",
+  "retail_site": "Retail Site",
   "role": "Role",
   "running": "Running",
   "running_platform": "Running platform",
@@ -798,29 +846,5 @@
   "zalo_messages_sent": "Sent messages on Zalo",
   "zoom_id": "ID of Zoom room",
   "zoom_link": "Zoom Link",
-  "zoom_password": "Password of Zoom room",
-  "price_list_categories": "Price list categories",
-  "create_catalog": "Create a new price list category",
-  "update_catalog": "Updating the price list list",
-  "deactivate": "Deactivate",
-  "platform_transfer": "Platform Transfer",
-  "price_list_config": "Price List Configuration",
-  "price_list": "Price List",
-  "create_price_list": "Create a new price list",
-  "update_price_list": "Update price list",
-  "price_name": "The price list name",
-  "settlement_date": "Settlement date of the month",
-  "benefit_package": "Benefit package",
-  "benefit_package_list": "Benefit package list",
-  "create_benefit_package": "Create a new benefit package",
-  "update_benefit_package": "Update benefit package",
-  "configure_benefit_package": "Configure benefit package",
-  "benefit_package_name": "Benefit package name",
-  "price_six_months": "Price 6 months",
-  "price_one_year": "Price for 1 year",
-  "business_empower": "Empowering Business",
-  "payment_updates": "Payment updates",
-  "collaborators_page": "Collaborators Page",
-  "retail_site": "Retail Site",
-  "price_list_dis": "Configure price list display"
+  "zoom_password": "Password of Zoom room"
 }
