--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,4 +1,5 @@
 {
+  "account_balance": "Số dư tài khoản",
   "account_holder": "Tên chủ tài khoản",
   "account_number": "Số tài khoản",
   "account_number_receiver": "Tài khoản nhận tiền",
@@ -84,6 +85,7 @@
   "benefit_package": "Nhóm quyền lợi",
   "benefit_package_list": "Danh mục nhóm quyền lợi",
   "benefit_package_name": "Tên nhóm quyền lợi",
+  "big_course": "Khoá học lớn",
   "big_courses": "Khóa học lớn",
   "business_empower": "Trao quyền kinh doanh",
   "by_date": "Theo ngày",
@@ -111,6 +113,7 @@
   "category": "Danh mục",
   "category_icon": "Icon danh mục",
   "category_name": "Tên danh mục",
+  "caution": "Lưu ý",
   "certificate": "Chứng chỉ",
   "change_budget_of_order": "Thay đổi ngân sách đơn hàng",
   "change_role": "Thay đổi vai trò",
@@ -126,6 +129,7 @@
   "class_name": "Tên lớp học",
   "classes": "Lớp học",
   "click_here_to_paste_image": "CLick chuột vào đây để paste hình ảnh",
+  "collaborators_page": "Trang cộng tác viên",
   "collected_information": "Các thông tin cần thu thập",
   "column_name": "Tên cột",
   "comment_reaction": "Thả tim bình luận",
@@ -279,18 +283,49 @@
   "gift_course": "Tặng khóa học",
   "gift_membership": "Tặng gói thành viên",
   "growth": "Tăng trưởng",
+  "guide_class_course": "Chọn khóa học mà bạn muốn tạo lớp",
+  "guide_class_max_absences": "Điền vào số buổi mà bạn có thể chấp nhận cho học viên tiếp tục tham gia lớp học của mình.",
+  "guide_class_name": "Điền một tên bất kỳ mà bạn dễ nhận diện",
+  "guide_course_code": "Thường sẽ là tên khóa học được bỏ dấu và thêm dấu gạch ngang để nối các từ. Bạn cũng có thể tự thay đổi theo ý muốn.",
+  "guide_course_description": "Viết mô tả ngắn cho khóa học. Lưu ý: cần chứa tên khóa học và các từ khóa seo để tăng khả năng tìm kiếm trên google.",
+  "guide_course_direct_referral_point": "Là điểm số khi học viên giới thiệu khách hàng mới hoàn tất việc đăng ký thông tin và xác thực dăng ký bằng cách bấm vào link xác thực được gửi đến trong email.",
+  "guide_course_indirect_referral_point": "Là điểm số khi học viên được một học viên khác giới thiệu lại tiếp tục giới thiệu khách hàng mới hoàn tất việc đăng ký thông tin và xác thực dăng ký bằng cách bấm vào link xác thực được gửi đến trong email.",
+  "guide_course_name": "Hãy đặt tên khóa học sao cho dễ nhớ và tập trung vào mong muốn của khách hàng",
+  "guide_course_refferal_program": "Bạn có thể điền vào đây nội dung hướng dẫn thể lệ cuộc thi giới thiệu tính điểm. Bạn có thể tham khảo nội dung của chúng tôi qua việc bấm vào nút \"Tải ví dụ\"",
+  "guide_course_registration_point": "Là điểm số khi khách hàng hoàn tất việc đăng ký thông tin và xác thực dăng ký bằng cách bấm vào link xác thực được gửi đến trong email.",
+  "guide_course_teacher": "Chọn diễn giả sẽ giảng dạy khóa học này.",
+  "guide_course_type_big": "Khóa học lớn là khóa học có phí. Bạn không thể tạo và bán vé cho khóa học này.",
+  "guide_course_type_funnel": "Khóa học phễu sẽ tổ chức miễn phí nên không có giá khóa học. Nhưng bạn cũng có thể bán thêm vé có phí.",
+  "guide_domain_without_prefix": "Không cần điền https://www.",
+  "guide_external_selection": "Hãy copy đường link của trang bên ngoài mà bạn muốn",
+  "guide_footer_column_name": "Đây là tiêu đề của cột, dùng để phân nhóm các nội dung bạn muốn hiển thị ở chân trang.",
+  "guide_footer_item_name": "Đây là tên nút bấm sẽ hiển thị ở chân trang.",
+  "guide_footer_item_position": "Đây là thứ tự sẽ hiển thị ở trong cột",
   "guide_group_permission_activate": "Hãy luôn đảm bảo nhóm quyền của tổ chức ở trạng thái kích hoạt. Bạn cũng có thể vô hiệu nhóm quyền khi muốn hạn chế quyền hạn của nhân sự.",
   "guide_group_permission_add_new": "Hãy ấn vào nút Thêm mới này để chuyển đến trang Thêm mới nhóm quyền.",
+  "guide_group_permission_description": "Bạn có thể mô tả vài trò và trách nhiệm của nhóm quyền ở đây. Nội dung này giúp bạn dễ dàng phân quyền cho từng nhân viên trong tổ chức.",
   "guide_group_permission_name": "Hãy đặt tên theo chức vụ, ví dụ trưởng phòng nhân sự, trưởng phòng sale, nhân viên sale...",
   "guide_group_permission_pick": "Việc nhóm nhiều quyền nhỏ lại thành một nhóm quyền mang ý nghĩa giống như bạn tạo ra một chức vụ và trao cho họ một số các quyền hạn nhất định trong tổ chức của bạn.",
+  "guide_group_permission_status": "Hãy luôn đảm bảo nhóm quyền của tổ chức ở trạng thái kích hoạt. Bạn cũng có thể vô hiệu nhóm quyền khi muốn hạn chế quyền hạn của nhân sự.",
   "guide_header_menu_name": "Đây là tên nút bấm sẽ hiện ra ở thanh menu đầu trang như trang chủ, giới thiệu, khóa học...",
   "guide_header_menu_parent_link": "Nếu muốn nút bấm này là thư mục con (category) nằm trong 1 nút bấm khác (navigation) thì hãy chọn phần này, nếu không thì để trống.",
   "guide_header_menu_position": "Thứ tự hiển thị trên thanh menu. Tính từ trái qua phải",
   "guide_header_menu_status": "Nếu bật, nút bấm sẽ hiện lên ở thanh menu. Nếu tắt, nút bấm này sẽ ẩn đi.",
+  "guide_homepage_creation": "Chỉ có thể tạo 1 trang chủ, đây là trang mặc định khi truy cập website của bạn",
+  "guide_internal_selection": "Hãy chọn một trong những trang mà bạn đã tạo ở phần thiết lập các trang con",
+  "guide_lesson_duration": "Chọn thời gian bắt đầu và kết thúc của buổi học. Đây cũng là khoảng thời gian mà học viên của bạn có thể điểm danh.",
+  "guide_lesson_duration_note": "Lưu ý: Một lớp học nên chia thành nhiều buổi học. Một ngày học bạn có thể chia thành 2 buổi sáng và chiều.",
+  "guide_normal_page_creation": "Có thể tạo nhiều",
+  "guide_organization_acp_domain": "Đây là tên miền để nhân sự của tổ chức truy cập vào quản trị vận hành hệ thống.",
   "guide_organization_address": "Nhập địa chỉ trụ sở hoặc văn phòng tổ chức của bạn. Thông tin này sẽ hiện ra ở trang liên hệ của tổ chức.",
   "guide_organization_admin": "Đây là tài khoản Admin của hệ thống",
+  "guide_organization_data_process_auto": "Tự động: Hệ thống sẽ tự chia đều data cho các nhân viên sale của tổ chức theo logic xoay vòng (1234512345...)",
+  "guide_organization_data_process_manual": "Thủ công: Trưởng phòng sale chủ động chia data cho nhân viên sale của tổ chức",
+  "guide_organization_e_learning_domain": "Đây là tên miền để học viên truy cập vào hệ thống học tập e-learning.",
   "guide_organization_email": "Đây là thông tin email của tổ chức để khách hàng liên hệ với tổ chức của bạn. Thông tin này sẽ hiện ra ở thanh menu và mục liên hệ ngoài trang chủ.",
   "guide_organization_embed_map": "Nếu tổ chức của bạn đã cung cấp thông tin và địa điểm trên bản đồ google map, bạn hãy copy và dán mã nhúng vào đây. Thông tin về địa điểm tổ chức của bạn sẽ hiện ra ở trang liên hệ của tổ chức.",
+  "guide_organization_forum_domain": "Đây là tên miền để học viên truy cập vào hệ thống diễn đàn của cộng đồng.",
+  "guide_organization_homepage_domain": "Đây là tên miền để học viên truy cập vào trang chủ của tổ chức, các landingpage và thực hiện chức năng đăng ký khóa học.",
   "guide_organization_logo": "Các phần logo này sẽ hiển thị ở thanh chức năng bên trái của website quản trị và các trang nội dung khác.",
   "guide_organization_name": "Tên tổ chức là thông tin sẽ hiện lên ở email, trang e-learning và các trang thông tin khác. Bạn có thể tùy chỉnh nó bất kỳ lúc nào.",
   "guide_organization_phone": "Đây là thông tin số điện thoại của tổ chức để khách hàng liên hệ với tổ chức của bạn. Thông tin này sẽ hiện ra ở thanh menu và mục liên hệ ngoài trang chủ.",
@@ -299,6 +334,7 @@
   "guide_page_content": "Đây là nội dung chính của trang. Bạn nên thuê người code web html hoặc liên hệ với đội ngũ hỗ trợ dịch vụ của chúng tôi. Hotline: 0969218765",
   "guide_page_description": "Mô tả ngắn về nội dung của trang này.",
   "guide_page_name": "Tên của trang con trong website của bạn",
+  "guide_page_slug": "Thông thường sẽ là tên của trang con viết không dấu, nối liền vởi dấu gạch ngang",
   "guide_website_background_footer": "Màu sắc của chân trang, nên tương phản với màu của logo, thường sẽ là màu tối.",
   "guide_website_background_header": "Màu sắc của thanh menu, nên tương phản với màu của logo, thường sẽ là màu trắng.",
   "guide_website_copyright": "Nội dung này sẽ hiện ra ở cuối trang chủ, thường sẽ là một dòng ngắn. Ví dụ: COPYRIGHT © (tên tổ chức) ALL RIGHTS RESERVED",
@@ -307,6 +343,13 @@
   "guide_website_logo_header": "Tải lên hình ảnh logo tổ chức của bạn. Hình ảnh này sẽ hiện lên ở đầu trang",
   "guide_website_name": "Hãy nhập tên website một cách ngắn gọn, dễ nhớ. Thường sẽ là tên tổ chức của bạn.",
   "guide_website_social_links": "Link trang mạng xã hội của tổ chức. Những đường link này cần bao gồm cả https://www........",
+  "guide_withdraw_config_description": "Đây là phần ghi chú mà bạn muốn thông báo cho thành viên. Nội dung này sẽ hiển thị ở phần",
+  "guide_withdraw_monthly": "Hãy điền vào ngày nào bạn muốn thành viên thực hiện lệnh rút tiền.",
+  "guide_withdraw_weekly": "Hãy chọn thứ nào bạn muốn thành viên thực hiện lệnh rút tiền.",
+  "guide_withdrawal_advanced_limit": "Chỉ áp dụng với hình thức rút tiền theo tháng. Điền vào đây số % tổng số tiền có trong tài khoản của thành viên mà bạn cho phép rút sớm.",
+  "guide_withdrawal_bank_transfer": "là phương pháp thanh toán thủ công, bạn cần chủ động kích hoạt tài khoản thành viên và khóa học e-learning bằng tay.",
+  "guide_withdrawal_payment_method_note": "khi thiết lập phần thanh toán này, bạn nên liên hệ với đội ngũ hỗ trợ của chúng tôi. Hotline: 0969218765",
+  "guide_withdrawal_vnpay": "là phương pháp thanh toán tự động, tất cả các khâu thanh toán, xác thực và kích hoạt khóa học cũng như hạng thành viên đều hoàn toàn tự động",
   "has_account": "Đã có tài khoản",
   "has_discount": "Có chiết khấu",
   "homepage": "Trang chủ",
@@ -363,6 +406,7 @@
   "lifetime_price": "Giá vĩnh viễn",
   "link": "Liên kết",
   "link_on_menu": "Đường dẫn trên thanh menu",
+  "load_example": "Tải ví dụ",
   "location": "Địa điểm",
   "log_out": "Đăng xuất",
   "logo_link": "Đường dẫn ảnh logo",
@@ -402,7 +446,7 @@
   "no": "STT",
   "no_account": "Chưa có tài khoản",
   "no_demands": "Không có nhu cầu",
-  "normal_page": "Trang bình thường",
+  "normal_page": "Trang thông thường",
   "note": "Ghi chú",
   "note_content": "Nội dung ghi chú",
   "notification_email": "Email thông báo",
@@ -413,6 +457,7 @@
   "opening_class": "Lớp đang mở",
   "operation": "Vận hành",
   "optional_course_settings": "Thiết lập khoá học tuỳ chọn",
+  "or": "hoặc",
   "order": "Thứ tự",
   "order_code": "Mã đơn hàng",
   "order_count": "Số giao dịch",
@@ -427,6 +472,7 @@
   "organization_representative": "Người đại diện tổ chức",
   "organizations": "Tổ chức",
   "other_costs": "Các chi phí khác",
+  "other_methods": "các phương pháp khác",
   "others_repliable": "Người khác trả lời",
   "over_paid": "Thanh toán thừa",
   "owner": "Chủ sở hữu",
@@ -506,6 +552,7 @@
   "price_list": "Bảng giá",
   "price_list_categories": "Danh mục bảng giá",
   "price_list_config": "Cấu hình bảng giá",
+  "price_list_dis": "Cấu hình hiển thị bảng giá",
   "price_name": "Tên bảng giá",
   "price_one_year": "Giá 1 năm",
   "price_six_months": "Giá 6 tháng",
@@ -598,6 +645,7 @@
   "reset": "Cài lại",
   "resource": "Tài nguyên",
   "restore_ticket": "Khôi phục",
+  "retail_site": "Trang bán lẻ",
   "role": "Vai trò",
   "running": "Đang hoạt động",
   "running_platform": "Nền tảng chạy",
@@ -798,29 +846,5 @@
   "zalo_messages_sent": "Đã gửi tin nhắn Zalo",
   "zoom_id": "ID phòng Zoom",
   "zoom_link": "Link Zoom",
-  "zoom_password": "Mật khẩu phòng Zoom",
-  "price_list_categories": "Danh mục bảng giá",
-  "create_catalog": "Tạo mới danh mục bảng giá",
-  "update_catalog": "Cập nhật danh mục bảng giá",
-  "deactivate": "Tạm dừng",
-  "platform_transfer": "Chuyển giao nền tảng",
-  "price_list_config": "Cấu hình bảng giá",
-  "price_list": "Bảng giá",
-  "create_price_list": "Tạo mới bảng giá",
-  "update_price_list": "Cập nhât bảng giá",
-  "price_name": "Tên bảng giá",
-  "settlement_date": "Ngày kết toán trong tháng",
-  "benefit_package": "Nhóm quyền lợi",
-  "benefit_package_list": "Danh mục nhóm quyền lợi",
-  "create_benefit_package": "Tạo mới nhóm quyền lợi",
-  "update_benefit_package": "Cập nhật nhóm quyền lợi",
-  "configure_benefit_package": "Cấu hình nhóm quyền lợi",
-  "benefit_package_name": "Tên nhóm quyền lợi",
-  "price_six_months": "Giá 6 tháng",
-  "price_one_year": "Giá 1 năm",
-  "business_empower": "Trao quyền kinh doanh",
-  "payment_updates": "Cập nhật thanh toán",
-  "collaborators_page": "Trang cộng tác viên",
-  "retail_site": "Trang bán lẻ",
-  "price_list_dis": "Cấu hình hiển thị bảng giá"
+  "zoom_password": "Mật khẩu phòng Zoom"
 }
