change "Phễu khoá học" to "Khoá học phễu" at "Thiết lập"

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -151,6 +151,7 @@
   "conversion_goal": "Conversion goal",
   "copyright_text": "Copyright text",
   "course": "Course",
+  "course_funnel": "Course funnel",
   "course_categories": "Course categories",
   "course_category_list": "Course categories",
   "course_code": "Course code",
