--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -151,6 +151,7 @@
   "conversion_goal": "Đích chuyển đổi",
   "copyright_text": "Copyright (Tuyên bố bản quyền)",
   "course": "Khoá học",
+  "course_funnel": "Khoá học phễu",
   "course_categories": "Danh mục khoá học",
   "course_category_list": "Danh sách danh mục khóa học",
   "course_code": "Mã khoá học",
