update localization for sub-forum-detail

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -137,6 +137,7 @@
   "commission_method": "Commission method",
   "commission_policy": "Commission policy",
   "commission_rate": "Commission rate",
+  "community": "Community",
   "community_categories": "Community categories",
   "community_category": "Community category",
   "community_name": "Community name",
