--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -73,7 +73,7 @@
   "attendance_time": "Khung giờ học",
   "auto": "Tự động",
   "avatar": "Ảnh đại diện",
-  "avatar_link": "Đường dẫn ảnh avatar",
+  "avatar_link": "Đường dẫn ảnh đại diện",
   "back": "Quay lại",
   "background": "Ảnh nền",
   "badge": "Huy hiệu",
@@ -137,6 +137,7 @@
   "commission_method": "Phương thức tính hoa hồng",
   "commission_policy": "Chính sách hoa hồng",
   "commission_rate": "Mức hoa hồng",
+  "community": "Cộng đồng",
   "community_categories": "Danh sách danh mục cộng đồng",
   "community_category": "Danh mục cộng đồng",
   "community_name": "Tên cộng đồng",
