add config sub module

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -823,5 +823,8 @@
   "collaborators_page": "Collaborators Page",
   "retail_site": "Retail Site",
   "price_list_dis": "Configure price list display",
-  "bao_kim": "Bao Kim e-wallet"
+  "bao_kim": "Bao Kim e-wallet",
+  "specify_admin": "Specify Admin",
+  "participation": "Privilege of Participation",
+  "allow_free_participation": "Free participation is allowed"
 }
