update tooltip guide for "Thiết lập Landing page", "Thiết lập vé khoá học", "Thiết lập form đăng ký"

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -285,6 +285,31 @@
   "gift_course": "Tặng khóa học",
   "gift_membership": "Tặng gói thành viên",
   "growth": "Tăng trưởng",
+  "guide_ckeditor": "Nếu sử dụng mã code html, hãy làm theo 3 bước sau:",
+  "guide_ckeditor_step_1": "B1: bạn cần ấn vào nút Mã HTML",
+  "guide_ckeditor_step_2": "B2: dán vào đây đoạn mã HTML",
+  "guide_ckeditor_step_3": "B3: ấn lại vào nút Mã HTML để hệ thống ghi nhận.",
+  "guide_landing_name": "Hãy đặt tên landingpage sao cho dễ nhận diện. Bạn có thể tạo ra nhiều landingpage để chạy quảng cáo cho nhiều nền tảng khác nhau.",
+  "guide_landing_code": "Thường sẽ là tên landingpage được bỏ dấu và thêm dấu gạch ngang để nối các từ. Bạn cũng có thể tự thay đổi theo ý muốn.",
+  "guide_landing_code_note": "Nên để ngắn gọn vì đây sẽ là đường dẫn để học viên sao chép và chia sẻ lên các nền tảng mạng xã hội.",
+  "guide_landing_course": "Chọn khóa học mà bạn muốn tạo landingpage",
+  "guide_landing_content": "Bạn có thể điền vào đây mã code html được thiết kế riêng hoặc chỉnh sửa nội dung theo mẫu sẵn có của chúng tôi.",
+  "guide_landing_seo_title": "Thường là tên khóa học. Tiêu đề seo giúp khách hàng tìm thấy khóa học trên google và hiển thị khi học viên chia sẻ link trên các nền tảng mạng xã hội.",
+  "guide_landing_seo_keywords": "Bạn nhập vào các từ khóa mà khách hàng có thể nhập để tìm kiếm trên google.",
+  "guide_landing_seo_image": "Tải lên hình ảnh sẽ hiển thị khi học viên chia sẻ đường link trên các nền tảng mạng xã hội.",
+  "guide_landing_seo_description": "Mô tả ngắn về khóa học để khách hàng dễ nhận diện. Nội dung này sẽ hiển thị khi học viên chia sẻ đường link trên các trang mạng xã hội.",
+  "guide_learning_ticket_name": "Điền tên hạng vé theo ý muốn của bạn",
+  "guide_learning_ticket_course":"Một hạng vé chỉ có thể được gán cho một khóa học duy nhất và không thể thay đổi.",
+  "guide_learning_ticket_price": "Điền vào mức giá mà bạn muốn khách hàng phải chi trả. Nếu là vé miễn phí thì bạn điền 0.",
+  "guide_registration_form_title": "Điền tiêu đề form đăng ký theo ý muốn của bạn. Nội dung này sẽ hiện lên ở trên cùng của form đăng ký.",
+  "guide_registration_form_course": "Một form đăng ký chỉ có thể được gán cho một khóa học duy nhất và không thể thay đổi.",
+  "guide_registration_form_social_group": "Điền vào đường dẫn nhóm bất kỳ mà bạn muốn khách hàng tham gia sau khi hoàn tất đăng ký.",
+  "guide_registration_form_social_group_note": "Có thể là nhóm zalo, facebook hay là một trang website tùy bạn chọn.",
+  "guide_registration_form_redirect": "Copy đường dẫn này và gán vào nút bấm tham gia nhóm trong trang Thank you.",
+  "guide_registration_form_description": "Điền mô tả form đăng ký theo ý muốn của bạn. Nội dung này sẽ hiện lên ở ngay dưới tiêu đề của form đăng ký.",
+  "guide_registration_form_thankyou": "Bạn có thể điền vào đây mã code html được thiết kế riêng hoặc chỉnh sửa nội dung theo mẫu sẵn có của chúng tôi",
+  "guide_registration_form_thankyou_2": "Copy đường dẫn trang chuyển hướng để gán vào nút bấm tham gia nhóm trong trang Thank you.",
+  "guide_registration_form_collective_info": "Có 3 thông tin bắt buộc thu thập là họ tên, email và số điện thoại. Ngoài ra bạn có thể chọn thu thập thêm thông tin bằng cách tích chọn các trường thông tin ở mục này.",
   "guide_class_course": "Chọn khóa học mà bạn muốn tạo lớp",
   "guide_class_max_absences": "Điền vào số buổi mà bạn có thể chấp nhận cho học viên tiếp tục tham gia lớp học của mình.",
   "guide_class_name": "Điền một tên bất kỳ mà bạn dễ nhận diện",
