--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,7 @@
   "activity": "Activity",
   "activity_history": "Activity history",
   "add": "Add",
+  "add_agency": "Add agency",
   "add_content": "Add content",
   "add_course": "Add course",
   "add_level": "Add level",
