--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -12,6 +12,7 @@
   "activity": "Hoạt động",
   "activity_history": "Xem quá trình hoạt động",
   "add": "Thêm",
+  "add_agency": "Thêm đại lý",
   "add_content": "Thêm nội dung",
   "add_course": "Thêm khoá học",
   "add_level": "Thêm mức",
@@ -108,7 +109,7 @@
   "cannot_remove_permission_group": "Lỗi xoá nhóm quyền",
   "caring": "Đang chăm sóc",
   "caring_by": "Nhân viên chăm sóc",
-  "caring_e_learners": "Danh sách học viên e-learning đang chăm",
+  "caring_e_learners": "Danh sách học viên e-learning đang chăm sóc",
   "caring_learners": "Danh sách học viên đang chăm sóc",
   "category": "Danh mục",
   "category_icon": "Icon danh mục",
