update style for tour guide

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -133,6 +133,7 @@
   "classes": "Classes",
   "click_here_to": "Click here to",
   "click_here_to_paste_image": "Click here to paste image",
+  "close": "Close",
   "collaborators_page": "Collaborators Page",
   "collected_information": "Collected information",
   "column_name": "Column name",
@@ -702,9 +703,9 @@
   "seo_keywords": "SEO keywords",
   "seo_tags": "SEO tags",
   "seo_title": "SEO title",
+  "setting": "Setting",
   "setting_tutorial": "Setting tutorial",
   "settings": "Settings",
-  "setting": "Setting",
   "settlement_date": "Settlement date of the month",
   "share_caring_learners_to_others": "Share caring learners to others",
   "short_description": "Short description",
