--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -133,6 +133,7 @@
   "classes": "Lớp học",
   "click_here_to": "Bấm vào đây để",
   "click_here_to_paste_image": "CLick chuột vào đây để paste hình ảnh",
+  "close": "Đóng",
   "collaborators_page": "Trang cộng tác viên",
   "collected_information": "Các thông tin cần thu thập",
   "column_name": "Tên cột",
@@ -478,7 +479,7 @@
   "name_code_campaign": "Tên/Mã chiến dịch",
   "new_price": "Giá mới",
   "news": "Tin tức",
-  "next": "Tiếp",
+  "next": "Tiếp theo",
   "no": "STT",
   "no_account": "Chưa có tài khoản",
   "no_demands": "Không có nhu cầu",
